# nixos-configs

./: .editorconfig  .gitignore  README.md  __BAK_applications.nix.IGNORE  _applications.nix  _configuration.nix  ai.nix  atreides  atreides_base.nix  atreides_hardware.nix  common.nix  configuration.nix  development.nix  environment.nix  hardware.nix  icarus_base.nix  icarus_hardware.nix  identity.nix.example  networking.nix  nixpkgs.nix  packages.nix  programs.nix  qbittorrent-vpn.nix  result  security.nix  services.nix  shared  theme.nix  users.nix
_scratch/capacities/: default.nix
_scratch/conky/: default.nix
_scratch/firefox-nightly/: default.nix
_scratch/thunderbird/: default.nix
atreides/: atreides_base.nix  configuration.nix  hardware.nix  secret.txt  webserver.nix
components/: debugging.nix  environment.nix  fonts.nix  hardware.nix  networking.nix  nixpkgs.nix  packages.nix  programs.nix  security.nix  services.nix  system.nix  theme.nix  users.nix  virtualization.nix  xdg.nix
custom-packages/feedbin-rss/: default.nix
custom-packages/firefox-nightly/: default.nix
custom-packages/gemini-cli/: wrapper.nix
custom-packages/gemini-desktop/: default.nix
custom-packages/gh-clone/: default.nix
custom-packages/gimp/: default.nix
custom-packages/gimp-devel/: default.nix
custom-packages/jetbrains/: default.nix
custom-packages/kde-desktop/: default.nix
custom-packages/kde-klassy/: default.nix
custom-packages/ladybird/: default.nix
custom-packages/ollama/: default.nix
custom-packages/php/: default.nix
custom-packages/proton-suite/: default.nix
custom-packages/standardnotes/: default.nix  update.nix
custom-packages/strawberry-master/: default.nix
custom-packages/vivaldi-snapshot/: default.nix  update-vivaldi.sh
custom-packages/wavebox-beta/: default.nix
custom/anytype/: default.nix
custom/conky/: default.nix
custom/gegl-devel/: default.nix
custom/gimp-devel/: default.nix  wrapper.nix
custom/jetbrains/: default.nix  versions.json  versions.json.WORKING
custom/klassy/: default.nix
custom/megasync/: default.nix  default.nix.BAK
custom/nvidia/: default.nix  vaapi.nix
custom/rust/: default.nix
custom/standardnotes/: default.nix  src.json  update.nix
custom/strawberry/: default.nix
custom/thunderbird/: packages.nix  update.nix  wrapper.nix
custom/wavebox/: default.nix
custom/zen-browser/: default.nix  firefoxVersion.json
desktop/: fonts.nix  plasma.nix  theme.nix
hardware/: boot.nix  gpu.nix  peripherals.nix  power.nix
icarus/: configuration.nix  hardware.nix  icarus_base.nix  webserver.nix
machines/: atreides.nix  icarus.nix
machines/atreides/: base.nix  configuration.nix  hardware.nix  packages.nix
machines/icarus/: base.nix  configuration.nix  hardware.nix  packages.nix
overlays/jetbrains/: default.nix
pkgs/anytype/: default.nix
pkgs/gegl-devel/: default.nix
pkgs/gimp-devel/: default.nix
pkgs/jetbrains/: default.nix  update.py  versions.json  versions.json.ALT
pkgs/klassy/: default.nix
pkgs/masterpdf5/: default.nix
pkgs/rust/: default.nix
pkgs/wavebox/: default.nix
shared/: applications.nix  configuration.nix  hardware.nix  packages.nix  theme.nix
shared/custom-pkgs/jetbrains/: versions.json
shared/custom-pkgs/qt-6/: default.nix  qtModule.nix  srcs.nix
shared/custom-pkgs/qtgrpc/: default.nix
shared/custom-pkgs/qtgrpc/patches/: qtgrpc-qprotobufgenerator-remove-protobuf-logging.patch
shared/custom-pkgs/rust/: default.nix
shared/custom-pkgs/wavebox/: default.nix
shared/desktop-entries/: firefox-nightly.nix  firefox-stable.nix  google-chrome-stable.nix  mkvtoolnix.nix  thunderbird.nix
shared/pkgs/anytype/: default.nix
shared/pkgs/gegl-devel/: default.nix
shared/pkgs/gimp-devel/: default.nix
shared/pkgs/gimp-devel/plugins/: default.nix
shared/pkgs/jetbrains/: default.nix  versions.json
shared/pkgs/klassy/: default.nix
shared/pkgs/masterpdf5/: default.nix
shared/pkgs/qt-6/modules/: qtbase.nix
shared/pkgs/qt6-devel/: default.nix  fetch.sh  qt-env.nix  qtModule.nix  srcs.nix
shared/pkgs/qt6-devel/modules/: qtbase.nix
shared/pkgs/qtgrpc/patches/: qtgrpc-clientdeclarationprinter-remove-protobuf-logging.patch  qtgrpc-generatorbase-remove-protobuf-logging.patch  qtgrpc-qgrpcgenerator-remove-protobuf-logging.patch
shared/pkgs/standardnotes/: default.nix  src.json  update.nix
shared/pkgs/strawberry/: default.nix
shared/pkgs/wavebox/: default.nix
systems/atreides/: applications.nix  base.nix  configuration.nix  hardware.nix  packages.nix
systems/atreides/custom/jetbrains/: default.nix  update.py  versions.json  versions.json.NEW
systems/icarus/: applications.nix  base.nix  configuration.nix  hardware.nix  packages.nix
systems/icarus/custom/jetbrains/: default.nix  versions.json
workshop/: kde-dev-shell.nix
workshop/claude-ai/: CMakeLists.txt  claude-ai.notifyrc  default.nix  main.cpp
workshop/feedbin-rss/: CMakeLists.txt  default.nix  main.cpp
workshop/gemini-desktop/: CMakeLists.txt  default.nix  main.cpp  main.py  main.qml
workshop/plasma-dock/: CMakeLists.txt  README.md  default.nix  plasma-dock.desktop.download  shell.nix
workshop/plasma-dock/protocols/: wlr-layer-shell-unstable-v1.xml
workshop/plasma-dock/qml/: DockIcon.qml  DockIconPlaceholder.qml  main.qml
workshop/plasma-dock/src/: appmodel.cpp  appmodel.h  dockadaptor.cpp  dockadaptor.h  dodgemanager.cpp  dodgemanager.h  iconprovider.h  layershellwindow.cpp  layershellwindow.h  main.cpp  waylandregistry.cpp  waylandregistry.h  windowtracker.cpp  windowtracker.h
workshop/proton-suite/: CMakeLists.txt  default.nix
workshop/proton-suite/src/: controller.cpp  controller.h  main.cpp  resources.qrc
workshop/proton-suite/src/qml/: Main.qml  ProtonTab.qml  ProtonView.qml
